--- a/public/components/main.html
+++ b/public/components/main.html
@@ -22,7 +22,7 @@
   
     <div class="flex flex-col lg:flex-row justify-evenly items-center w-full gap-6 mt-10 text-center">
       <p class="max-w-[90%] lg:max-w-[20%] text-texto text-xl lg:text-2xl lg:font-bold">
-        <strong>Somos los mas eficaces cuando hablamos de</strong>
+        <strong>SOMOS LO MÁS EFICACES CUANDO HABLAMOS DE</strong>
       </p>
     <!-- Ícono solo para desktop -->
     <div class="hidden lg:block">
@@ -33,7 +33,7 @@
         <i class="fas fa-arrow-down text-texto text-4xl"></i>
     </div>
     <p class="text-texto text-2xl font-bold">
-        <span id="texto-dinamico">Asesorarte, fijar estrategias y <br> alcanzar los objetivos buscados.</span>
+        <span id="texto-dinamico">ASESORARTE. FIJAR ESTRATEGIAS. <br> ALCANZAR LOS OBJETIVOS BUSCADOS</span>
       </p>
     </div>
   </main>
