--- a/public/components/sobrenos.html
+++ b/public/components/sobrenos.html
@@ -13,9 +13,7 @@
     <p
       class="text-texto font-light w-[100%] sm:w-[80%] md:w-[70%] lg:w-[50%] prose-xl md:prose-xl lg:prose-p lg:prose-2xl text-justify"
     >
-    Contamos con más de 25 años de trayectoria y experiencia, empeñado en brindar a nuestros representados un servicio profesional eficaz, que permita alcanzar los objetivos propuestos. Contamos con un equipo de profesionales altamente capacitado, con una sólida experiencia en las siguientes áreas del derecho: ACCIDENTES DE TRÁNSITO; ACCIDENTES LABORALES; DESPIDOS; SUCESIONES Y DERECHO PENAL.
-    Nuestros letrados se encuentran comprometido a ofrecer un servicio de calidad, basado en la ética, la confidencialidad, el respeto, y profesionalismo. 
-    No dudes en contactarnos a través de cualquiera de nuestros canales de comunicación.
+    Contamos con más de 25 años de trayectoria y experiencia, empeñados en brindar a nuestros representados un servicio profesional eficaz, que permita alcanzar los objetivos propuestos. Contamos con un equipo de profesionales altamente capacitado, con una sólida experiencia en las siguientes áreas del derecho: ACCIDENTES DE TRÁNSITO; ACCIDENTES LABORALES; DESPIDOS; SUCESIONES Y DERECHO PENAL. <br>  Nuestros letrados se encuentran comprometidos a ofrecer un servicio de calidad, basado en la ética, la confidencialidad, el respeto, y profesionalismo.  <br>  No dudes en contactarnos a través de cualquiera de nuestros canales de comunicación.
     </p>
   </div>
 
