--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -34,7 +34,7 @@
             class="text-background hover:underline transition"
             target="_blank"
             href="https://www.instagram.com/estudiodoctoresrodriguez/"
-            ><i class="fab fa-instagram text-3xl m-2.5"></i>Instagram</a
+            ><i class="fab fa-instagram text-3xl m-2.5"></i></a
           >
           <!--           <a class="text-background hover:text-naranja transition" href="#"
             ><i class="fab fa-facebook text-3xl m-2.5"></i>Facebook</a
