--- a/public/components/servicios.html
+++ b/public/components/servicios.html
@@ -41,8 +41,7 @@
           class="flex flex-col justify-center items-center"
         >
           <p class="text-lg text-justify font-medium text-background prose-p">
-            Nunca un hecho es igual a otro; puede tener similitudes, pero jamás va a ser idéntico; así como tampoco es igual la evolución médica que tenga una persona respecto de otra; por eso es importante que nos llames y nos cuentes qué es lo que te pasó. Nuestros abogados junto al grupo de médicos legistas que nos ayudan te brindarán el mejor asesoramiento. 
-            Nuestro objetivo es tratar a cada cliente en forma personal, entendiendo que quien sufre un accidente padece, además de la lesión, angustias por no saber cuál será su futuro, y merece que se lo escuche y se le explique con detalles cuáles son sus derechos y cuál es la acción más conveniente a seguir para que pueda percibir la indemnización establecida por la Ley de Riesgos del Trabajo.
+            Nunca un hecho es igual a otro, puede tener similitudes, pero jamás va a ser idéntico. Así como tampoco es igual la evolución médica que tenga una persona respecto de otra.  <br> Por eso es importante que nos llames y nos cuentes qué es lo que te pasó.  <br> Nuestros abogados junto a un grupo de médicos legistas, te brindarán el mejor asesoramiento. <br> Nuestro objetivo es tratar a cada cliente en forma personal, entendiendo que quien sufre un accidente padece, además de la lesión, angustias por no saber cuál será su futuro. Merece que se lo escuche y se le explique con detalles cuáles son sus derechos y cuál es la acción más conveniente a seguir para que pueda percibir la indemnización establecida por la Ley de Riesgos del Trabajo.
             
           </p>
           <a href="https://wa.link/g1qbfy" target="_blank" class=" m-3 px-4 py-2 rounded-xl text-xl md:text-2xl lg:text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
@@ -82,9 +81,7 @@
           class="flex flex-col justify-center items-center"
         >
           <p class="text-lg text-justify font-medium text-background prose-p">
-            Durante más de 25 años nos dedicado a realizar reclamos por los daños y perjuicios sufridos por víctimas de accidentes de tránsito. Podemos afirmar que no existen dos casos iguales. Las consecuencias de cada siniestro varían, y deben ser tratadas en forma personalizada. 
-            Nos comprometemos a escucharte, asesorarte y brindarte el más eficaz servicio para que puedas percibir tu debida indemnización. 
-            Somos conscientes de que sufrís, que tenés expectativas y que estamos obligados a ser objetivos en nuestro asesoramiento. Contáctate con nosotros y arreglaremos una entrevista personal o a través de videollamada.             
+            Durante más de 25 años nos hemos dedicado a realizar reclamos por los daños y perjuicios sufridos por víctimas de accidentes de tránsito. <br> Podemos afirmar que no existen dos casos iguales. Las consecuencias de cada siniestro varían, y deben ser tratadas en forma personalizada.  <br> Nos comprometemos a escucharte, asesorarte y brindarte el más eficaz servicio para que puedas percibir tu debida indemnización.  <br> Somos conscientes de que sufrís, que tenés expectativas y que estamos obligados a ser objetivos en nuestro asesoramiento.              
           </p>
           <a href="https://wa.link/g1qbfy" target="_blank" class=" m-3 px-4 py-2 rounded-xl text-xl md:text-2xl lg:text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
             <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
@@ -122,8 +119,7 @@
           class="flex flex-col justify-center items-center"
         >
           <p class="text-lg text-justify font-medium text-background prose-p">
-            La cantidad de situaciones que pueden producirse en una relación laboral son muy diversas; que van desde trabajos no registrados, incorrecta categorización de las labores realizadas por el empleado, pago de un salario incorrecto, etc.  Por eso cada situación debe ser analizada por un profesional especializado en Derecho del Trabajo, este te asesorara y explicara cuales son los pasos a seguir conforme lo determina la Ley. 
-            Durante nuestra larga trayectoria hemos representado a trabajadores y empresas, lo que nos ha permitido tener un amplio conocimiento y entendimiento de las expectativas de cada parte. Ponemos ese conocimiento a tu disposición. Entrevístate con nosotros por el medio de comunicación que elijas y plantéanos tus inquietudes.  
+            La cantidad de situaciones que pueden producirse en una relación laboral son muy diversas, trabajos no registrados, incorrecta categorización de las labores realizadas por el empleado, pago de un salario incorrecto, entre otras.  <br>  Por eso cada situación debe ser analizada por un profesional especializado en Derecho del Trabajo, quien se encargara de asesorarte y explicarte cuáles son los pasos a seguir conforme lo determina la Ley. <br> Durante nuestra larga trayectoria hemos representado a trabajadores y empresas, lo que nos ha permitido tener un amplio conocimiento y entendimiento de las expectativas de cada parte. Ponemos ese conocimiento a tu disposición. Entrevístate con nosotros por el medio de comunicación que elijas y plantéanos tus inquietudes.  
             
           </p>
           <a href="https://wa.link/g1qbfy" target="_blank" class=" m-3 px-4 py-2 rounded-xl text-xl md:text-2xl lg:text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
@@ -162,7 +158,7 @@
           class="flex flex-col justify-center items-center"
         >
           <p class="text-lg text-justify font-medium text-background prose-p">
-            El departamento de derecho penal esta a cargo de las Dras. Laura FECCHINO y Andrea NOVELLO, quienes cuentan con una larga experiencia actuando ante la Justicia Federal, Nacional y Provincial; tanto durante la etapa de investigación como de debate oral, como defensoras o querellantes. Comunícate, concretaremos una entrevista para que nos cuentes tu situación y estableceremos los pasos a seguir dependiendo de cada situación particular.
+            El departamento de derecho penal esta a cargo de las Dras. Laura FECCHINO y Andrea NOVELLO, quienes cuentan con una larga experiencia actuando ante la Justicia Federal, Nacional y Provincial, tanto durante la etapa de investigación ante un debate oral, como defensoras o querellantes. Comunícate, concretaremos una entrevista para que nos cuentes tu situación y estableceremos los pasos a seguir dependiendo de cada situación particular.
           </p>
           <a href="https://wa.link/g1qbfy" target="_blank" class=" m-3 px-4 py-2 rounded-xl text-xl md:text-2xl lg:text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
             <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
@@ -198,7 +194,7 @@
             class="flex flex-col justify-center items-center"
           >
             <p class="text-lg text-justify font-medium text-background prose-p">
-              Al fallecer un familiar, además del dolor, tenemos que resolver la situación del patrimonio que ha dejado, establecer quienes tienen derechos sobre los bienes, no siempre es una tarea fácil, pero que debe ser realizada, Resulta indispensable para que cada uno de los herederos pueda disponer del porcentaje que le corresponde, iniciar el proceso sucesorio. No existe otra manera de ser declarado heredero que a través de la Declaratoria de Herederos. Consúltanos y te contamos cuáles son tus derechos y cuáles los costos de nuestra intervención.
+              Al fallecer un familiar, además del dolor, tenemos que resolver la situación del patrimonio que ha dejado.  <br> Establecer quienes tienen derechos sobre los bienes no siempre es una tarea fácil pero, debe ser realizada.  <br> Resulta indispensable para que cada uno de los herederos pueda disponer del porcentaje que le corresponde, iniciar el proceso sucesorio.  <br> No existe otra manera de ser declarado heredero que a través de la Declaratoria de Herederos. Consúltanos y te contamos cuáles son tus derechos y cuáles son los costos de nuestra intervención.
             </p>
             <a href="https://wa.link/g1qbfy" target="_blank" class=" m-3 px-4 py-2 rounded-xl text-xl md:text-2xl lg:text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
               <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
