--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -34,8 +34,8 @@
             class="text-background hover:underline transition"
             target="_blank"
             href="https://www.instagram.com/estudiodoctoresrodriguez/"
-            ><i class="fab fa-instagram text-3xl m-2.5"></i></a
-          >
+            ><i class="fab fa-instagram text-3xl m-2.5"></i
+          ></a>
           <!--           <a class="text-background hover:text-naranja transition" href="#"
             ><i class="fab fa-facebook text-3xl m-2.5"></i>Facebook</a
           > -->
